[DESIGN]: Refactored code according to checkstyle