@@ -2,7 +2,6 @@ package oogasalad.model.gameplay.blocks.textblocks;
 
 import java.util.Arrays;
 import java.util.List;
-import oogasalad.model.gameplay.blocks.textblocks.AbstractTextBlock;
 
 /**
  * A text block that represents the "stop" property.
@@ -25,7 +24,7 @@ public class StopTextBlock extends AbstractTextBlock {
    */
   @Override
   public List<String> getBlockGrammar() {
-    return Arrays.asList("PROPERTY");
+    return List.of("PROPERTY");
   }
 
 }
