@@ -1,9 +1,7 @@
 package oogasalad.model.gameplay.blocks.textblocks;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import oogasalad.model.gameplay.blocks.textblocks.AbstractTextBlock;
 
 /**
  * A text block that represents the "you" property.
@@ -27,6 +25,6 @@ public class YouTextBlock extends AbstractTextBlock {
    */
   @Override
   public List<String> getBlockGrammar() {
-    return Arrays.asList("PROPERTY");
+    return List.of("PROPERTY");
   }
 }
